--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <div class="small-6 columns">
                 <h1 class="text-center">YOU</h1>
                 <div class="healthbar">
-                    <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
+                    <div class="healthbar text-center" :style="{ width: player.hp + '%' }" style="background-color: green; margin: 0; color: white;">
+                        {{ player.hp }}
                     </div>
                 </div>
             </div>
             <div class="small-6 columns">
                 <h1 class="text-center">MONSTER</h1>
                 <div class="healthbar">
-                    <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
+                    <div class="healthbar text-center" :style="{ width: monster.hp + '%' }" style="background-color: green; margin: 0; color: white;">
+                        {{ monster.hp }}
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
         <template v-if="!start">
             <section class="row controls">
                 <div class="small-12 columns">
-                    <button @click="start = !start" id="start-game">START NEW GAME</button>
+                    <button @click="start =! start" id="start-game">START NEW GAME</button>
                 </div>
             </section>
         </template>
@@ -37,20 +37,23 @@
         <template v-if="start">
             <section class="row controls">
                 <div class="small-12 columns">
-                    <button @click="action = !action" id="attack">ATTACK</button>
-                    <button id="special-attack">SPECIAL ATTACK</button>
-                    <button id="heal">HEAL</button>
-                    <button @click="giveUp" id="give-up">GIVE UP</button>
+                    <button @click="doAttack()" id="attack">ATTACK</button>
+                    <button @click="doSpecialAttack()" id="special-attack">SPECIAL ATTACK</button>
+                    <button @click="doHeal()" id="heal">HEAL</button>
+                    <button @click="giveUp()" id="give-up">GIVE UP</button>
                 </div>
             </section>
         </template>
 
-        <template v-if="action">
+        <template>
             <section class="row log">
                 <div class="small-12 columns">
                     <ul>
-                        <li>
-
+                        <li v-for="damage in player.lastDamage">
+                            PLAYER HITS MONSTER FOR {{ damage }}HP
+                        </li>
+                        <li v-for="damage in monster.lastDamage">
+                            MONSTER HITS PLAYER FOR {{ damage }}HP 
                         </li>
                     </ul>
                 </div>
