--- a/index.html
+++ b/index.html
@@ -26,39 +26,42 @@
                 </div>
             </div>
         </section>
-        <template v-if="!start">
-            <section class="row controls">
-                <div class="small-12 columns">
-                    <button @click="start =! start" id="start-game">START NEW GAME</button>
-                </div>
-            </section>
-        </template>
 
-        <template v-if="start">
-            <section class="row controls">
-                <div class="small-12 columns">
-                    <button @click="doAttack()" id="attack">ATTACK</button>
-                    <button @click="doSpecialAttack()" id="special-attack">SPECIAL ATTACK</button>
-                    <button @click="doHeal()" id="heal">HEAL</button>
-                    <button @click="giveUp()" id="give-up">GIVE UP</button>
-                </div>
-            </section>
-        </template>
+        <section class="row controls" v-if="!start">
+            <div class="small-12 columns">
+                <button @click="start =! start" id="start-game">START NEW GAME</button>
+            </div>
+        </section>
 
-        <template>
-            <section class="row log">
-                <div class="small-12 columns">
-                    <ul>
-                        <li v-for="damage in player.lastDamage">
-                            PLAYER HITS MONSTER FOR {{ damage }}HP
-                        </li>
-                        <li v-for="damage in monster.lastDamage">
-                            MONSTER HITS PLAYER FOR {{ damage }}HP 
-                        </li>
-                    </ul>
-                </div>
-            </section>
-        </template>
+        <section class="row controls" v-if="start">
+            <div class="small-12 columns">
+                <button @click="doAttack()" id="attack">ATTACK</button>
+                <button @click="doSpecialAttack()" id="special-attack">SPECIAL ATTACK</button>
+                <button @click="doHeal()" id="heal">HEAL</button>
+                <button @click="giveUp()" id="give-up">GIVE UP</button>
+            </div>
+        </section>
+
+        <section class="row log" v-if="damages.playerLastDamage.length > 0">
+            <div class="small-6 columns">
+                <ul>
+                    <li v-for="damage in damages.playerLastDamage" :class="'player-turn'">
+                        <p>
+                        PLAYER HITS MONSTER FOR {{ damage }}HP
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="small-6 columns">
+                <ul>
+                    <li v-for="damage in damages.monsterLastDamage" :class="'monster-turn'">
+                        <p>
+                        MONSTER HITS PLAYER FOR {{ damage }}HP
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
     <script src="app.js"></script>
     </body>
